[gd_scene load_steps=4 format=3 uid="uid://whi5t1pok5d"]

[ext_resource type="Script" uid="uid://ctyrpp34qa3gf" path="res://scenes/main/main.gd" id="1_iuonh"]
[ext_resource type="AudioStream" uid="uid://voejmcm3248w" path="res://assets/music/battle_theme.mp3" id="2_l3cfh"]
[ext_resource type="Script" uid="uid://d1q5vk15gaqb7" path="res://scenes/main/hud.gd" id="3_k2fmo"]

[node name="Main" type="Node2D"]
script = ExtResource("1_iuonh")

[node name="LevelMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_l3cfh")
autoplay = true
bus = &"Music"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 323)

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 44.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("3_k2fmo")

[node name="PanelContainer" type="PanelContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="MarginContainer" parent="UI/HUD/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/PanelContainer/Panel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/PanelContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WaveCount" type="Label" parent="UI/HUD/PanelContainer/Panel/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Wave: 1"

[node name="PointCount" type="Label" parent="UI/HUD/PanelContainer/Panel/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Points: 0"

[node name="Button" type="Button" parent="UI/HUD/PanelContainer/Panel/HBoxContainer"]
visible = false
layout_direction = 3
layout_mode = 2
text = "Pause"

[node name="GameOver" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="Control" type="Control" parent="GameOver"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="GameOver/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/Control/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="GameOver/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="WaveSurvidedCount" type="Label" parent="GameOver/Control/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Total waves survived: 0"
horizontal_alignment = 1

[node name="KillCount" type="Label" parent="GameOver/Control/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Total kills: 0"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver/Control/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="GameOver/Control/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="GameOver/Control/PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.2509804, 0.20784314, 0.48235294, 0.57254905)
